[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/UITheme.tres" type="Theme" id=4]
[ext_resource path="res://Levels/AIEndless.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/CinematicPlayer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.027451, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "empty"
length = 0.001
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_start"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_to_black_AIvAI"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("StartExit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GnwarLogo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_start_AIvAI"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GnwarLogo:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 334, 63 ), Vector2( 334, -100 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GnwarLogo/GnwarLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LevelPicker/WaveSurvival:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LevelPicker/Back:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LevelPicker/AivAI:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.5, 1.2, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_to_black_WaveSurvival"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("StartExit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GnwarLogo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PanelContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_start_WaveSurvival"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GnwarLogo:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 334, 63 ), Vector2( 334, -100 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GnwarLogo/GnwarLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LevelPicker/WaveSurvival:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5, 1.2, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("LevelPicker/AivAI:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("LevelPicker/Back:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "logo_idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GnwarLogo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 334, 63 ), Vector2( 334, 55 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartExit:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GnwarLogo:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PanelContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LevelPicker/WaveSurvival:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LevelPicker/AivAI:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("LevelPicker/Back:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="AIEndless" parent="." instance=ExtResource( 5 )]

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -31.0
margin_right = 33.0
margin_bottom = 90.0
mouse_filter = 2

[node name="StartExit" type="VBoxContainer" parent="."]
margin_left = 760.0
margin_top = 471.0
margin_right = 905.0
margin_bottom = 609.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
theme = ExtResource( 4 )

[node name="Start" type="Button" parent="StartExit"]
margin_right = 145.0
margin_bottom = 20.0
mouse_filter = 1
theme = ExtResource( 4 )
text = "Start"

[node name="Exit" type="Button" parent="StartExit"]
margin_top = 24.0
margin_right = 145.0
margin_bottom = 44.0
mouse_filter = 1
theme = ExtResource( 4 )
text = "Exit"

[node name="LevelPicker" type="VBoxContainer" parent="."]
margin_left = 760.0
margin_top = 423.0
margin_right = 905.0
margin_bottom = 561.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
theme = ExtResource( 4 )

[node name="WaveSurvival" type="Button" parent="LevelPicker"]
margin_right = 145.0
margin_bottom = 20.0
mouse_filter = 1
theme = ExtResource( 4 )
text = "Wave Surival"

[node name="AivAI" type="Button" parent="LevelPicker"]
margin_top = 24.0
margin_right = 145.0
margin_bottom = 44.0
mouse_filter = 1
theme = ExtResource( 4 )
text = "AI vs AI"

[node name="Back" type="Button" parent="LevelPicker"]
margin_top = 48.0
margin_right = 145.0
margin_bottom = 68.0
mouse_filter = 1
theme = ExtResource( 4 )
text = "Back"

[node name="GnwarLogo" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.894737 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -237.0
margin_right = -113.0
margin_bottom = -170.0
rect_scale = Vector2( 5.5, 5.5 )
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 4

[node name="GnwarLabel" type="RichTextLabel" parent="GnwarLogo"]
margin_left = 7.63634
margin_top = 61.6364
margin_right = 83.6363
margin_bottom = 101.636
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "GNWAR"

[node name="CinematicPlayer" type="AnimationPlayer" parent="."]
anims/empty = SubResource( 3 )
anims/fade_to_black_AIvAI = SubResource( 2 )
anims/fade_to_black_WaveSurvival = SubResource( 5 )
anims/logo_idle = SubResource( 4 )
script = ExtResource( 6 )

[connection signal="pressed" from="StartExit/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="StartExit/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="LevelPicker/WaveSurvival" to="." method="_on_WaveSurvival_pressed"]
[connection signal="pressed" from="LevelPicker/AivAI" to="." method="_on_AivAI_pressed"]
[connection signal="pressed" from="LevelPicker/Back" to="." method="_on_Back_pressed"]
